啊啊啊啊啊

--- a/数据库系统/数据库系统.md
+++ b/数据库系统/数据库系统.md
@@ -46,3 +46,37 @@
     - 
 3. 逻辑结构设计
 4. 数据库物理设计
+
+
+## 事务管理
+- A原子性: 数据库的逻辑工作单位
+- C一致性: 数据库从一个一致性状态变到另一个一致性状态
+- I隔离性: 不能被其他事务干扰
+- D持续性: 一旦提交事务,改变是永久性的
+
+
+### 并发控制
+- 排他锁
+- 共享封锁
+
+## 备份与恢复
+两个原则
+1. 在数据丢失的情况下景邵的丢失或完全不丢失
+2. 备份和恢复的时间尽可能短。保证系统的最大可用性
+
+
+## 分布式数据库
+特点
+1. 数据的分布性
+    数据分布在集群中的各个节点
+2. 统一性
+3. 透明性
+    使用者不需要关注数据在哪里,关注整体的逻辑结构
+
+
+对比集中数据库的优点
+1. 坚固性好
+    分布在多台机器上可以通过一些策略达到一定的容错能力
+2. 可扩充性好
+3. 可改善性能
+4. 自治性好
