--- a/系统可靠性/系统可靠性.md
+++ b/系统可靠性/系统可靠性.md
@@ -8,3 +8,238 @@
 
 
 
+# 系统可靠性分析与设计
+
+## 概述
+
+- 可靠度
+
+  系统可靠度R(t)是指在t=0时系统正常的条件下，系统在时间区间[0,t]内能正常运行的概率
+
+- 可用度
+
+  系统的可用度A(t) 是指系统在时刻t 可运行的概率
+
+- 可维度
+
+  系统的可维度M(t) 是指系统失效后,在时间间隔内被修复的概率
+
+- 平均无故障时间
+
+  可靠度为R(t)的系统平均无故障时间, 定义为从 t=0 时到故障发生时系统的持续运行时间的期望值
+
+- 平均故障修复时间
+
+  可用度为A(t) 的系统平均故障修复时间
+
+- 平均故障间隔时间
+
+
+
+
+
+## 系统故障模型
+
+### 基本概念
+
+- 失效
+
+  硬件的物理变化
+
+- 故障
+
+  由于部件的失效、环境的物理干扰、操作错误或不正确的设计引起的硬件或软件中的错误状态
+
+- 错误
+
+  故障在程序或数据结构中的具体位置。
+
+
+
+- 故障或错误的表现形式
+
+  1. 间歇性	
+
+     由于不稳定的硬件或变化着的硬件或软件状态所引起的、仅仅是柔然出现的故障或错误
+
+  2. 瞬时性
+
+     由于暂时的环境条件而引起的故障或错误
+
+
+
+### 常见的故障模型
+
+1. 逻辑级别的故障模型
+
+2. 数据结构的故障
+
+   1. 独立差错
+
+      影响表现: 使一个二进制位发生变化
+
+   2. 算术差错
+
+      影响表现: 使一个数据的增加或减少
+
+   3. 单向差错
+
+      影响表现: 使一个二进制向量中的某些位炒着一个防线改变
+
+3. 软件故障或软件差错
+
+   1. 非法转移
+
+      程序执行了说明中不存在的转移
+
+   2. 误转移
+
+      程序执行了但是当前控制的数据不应该进行转移
+
+   3. 死循环
+
+      程序执行时间超过了规定界限
+
+   4. 空间溢出
+
+      程序使用的控件超过了规定界限
+
+   5. 数据执行
+
+      指令计数器指向了数据单元
+
+   6. 无理数据
+
+      程序输出的数据不合理
+
+
+
+
+
+## 容错技术
+
+### 单机容错技术
+
+1. 自检技术
+
+   - 自检指系统在发生非致命性故障时能自动发现故障和确定故障的性质、部位，并自动采取措施更换和隔离产生故障的部件。自检需要采用诊断技术，常用专门程序实现，属于程序设计的范围。
+
+   - 容错系统的实现要求系统必须具有重复部件或备份部件，或具有不止一个完成某种功能的通道。
+
+   - 自检技术通常配合冗余技术使用，计算机的容错系统一般都需要应用自检技术
+
+2. 冗余技术
+
+   - 冗余可以分为硬件冗余(增加硬件)、软件冗余(增加程序)、时间冗余(指令重复执行、程序重复执行)、信息冗余(增加数据位)
+
+   - 常用方法
+
+     1. 重复路线
+
+        用多个相同品种和规格的单元或构件并联起来，当做一个元件或构件使用，只要有一个不出现故障，系统就可以正常工作
+
+        在并联工作时每一个构件的可靠性概率是互相独立的
+
+     2. 备份路线
+
+        参加备份的构件并不直接接入系统，只有在处于工作状态的构件发生故障后才把输入和输出接到备份构件上来，童儿切断故障构件的输入输出
+
+   
+
+   
+
+   
+### 双机热备份
+
+- 双机热备份是一种软硬件结合的较高容错应用方案。
+
+  该方案是由两台服务器系统和一个外接共享磁盘整列柜和相应的双击热备份软件组成。
+
+   
+
+### 服务器集群技术
+
+- 集群技术是指一组互相独立的服务器在网络中组成为单一的系统工作，并以单一系统的模式加以管理
+- 一个集群包含多台(至少2台)
+
+
+
+
+
+
+
+## 可靠性模型
+
+- 时间模型
+- 故障植入模型
+- 数据模型
+
+
+
+## 可靠性计算
+
+1. 组合模型
+
+   一个系统只要满足以下条件就可以使用组合模型来计算其可靠性
+
+   1. 系统只有两种状态: 运行状态和失效状态
+   2. 系统可以划分成若干干个不重叠的部件，每个部件也只有两个状态 :运行状态和失效状态
+   3. 部件的失效是独立的
+   4. 系统失效当且仅当系统中的剩余资源不满足系统运行的最低资源要求(系统的状态只依赖于部件的状态)
+   5. 已知每个部件的可靠性，可靠性指可用度或可靠度等概率参数
+
+2. 马尔科夫模型
+
+   核心概念是状态和状态转移
+
+
+
+
+
+## 提升系统可靠性的措施
+
+### 硬件冗余
+
+- 常用三模冗余, TMR , 三个相同的模块接收三个相同的输入，产生三个结果送到多数表决器，表决器的输出取决于三个输入的多数，若有一个故障模块，则另两个模块的输出可将故障模块的输出屏蔽，从而不在于表决器输出产生误差
+
+
+
+### 信息冗余
+
+- 信息冗余是指通过在数据中副驾冗余的信息已达到故障检测、故障掩蔽或容错的目的
+
+
+
+#### 海明校验码
+
+CRC 码计算
+
+1. 将x的最高幂次为R的生成多项式G(x) 转换成对应的R+1位二进制数
+2. 将信息吗左移R位，相当于对应信息多项式C(X)*2R
+3. 用生成多项式对信息吗做摸2除，得到r为的余数
+4. 将余数拼到信息吗左移后空出的未知得到CRC码
+
+
+
+
+
+
+
+## 备份和恢复
+
+### 备份
+
+#### 脱机备份
+
+冷备份
+
+静态转储技术，被封所有的物理文件，初始化文件
+
+
+
+#### 联机备份
+
+热备份
+
+动态转存，只备份所需要的文件
+
