系统性能评价

--- a/系统性能评价/系统性能评价.md
+++ b/系统性能评价/系统性能评价.md
@@ -89,3 +89,16 @@
     1. 最大并发连接数
     2. 响应延迟
     3. 吞吐量(每秒处理的请求数量)
+    
+    
+### 系统监视
+- 系统监视的目标是为例评估系统性能. 要监视系统性能需要手机某个时间段内的三种不同类型的性能数据
+    1. 常规性能数据. 该信息可以帮助识别短期趋势.
+    2. 比较基准的性能数据. 该信息可以帮助人们发现缓慢、经历长时间才发生的变化
+    3. 服务水平报告数据. 该信息可以帮助人们确保系统能满足一定的服务或性能水平.
+- 三种方式.
+    1. 系统提供的指令
+        - linux: w\ps\las\
+        - windows netstat
+    2. 通过系统记录文件查阅系统在特定时间内的运行状态
+    3. 集成命令、文件记录和可视化技术
