软件架构设计

--- a/软件架构设计/软件架构设计.md
+++ b/软件架构设计/软件架构设计.md
@@ -142,3 +142,102 @@
 #### 层次结构风格
 - 层次系统组织成一个层次结构,每一层为上层服务,并最为下层客户
 - 这种风格支持基于可增加抽象层的设计
+- 优点
+    1. 支持基于抽象程度递增的系统设计,使设计者可以把一个复杂系统按递增的步骤进行分解
+    2. 支持功能增强. 因为每一层至多和相邻的上下层交互,因此功能的改变最多影响相邻的上下层
+    3. 支持重用。只要提供服务接口定义不变,同一层的不同实现可以交换使用.允许定义一组标准接口,不同的实现方式
+    
+- 缺点
+    1. 并不是每个系统都可以很容易地划分为分层模式
+    2. 很难找到一个合适的、正确的层次抽象方法
+
+### 独立构件风格
+- 独立构件风格强调系统中的每个构件都是相对独立的个体,他们之间不能直接通讯,以降低耦合度，提升灵活度
+
+#### 进程通信架构风格
+- 构件时独立的过程，连接件时消息传递.
+
+#### 事件系统风格
+- 基于事件的隐式调用风格的思想是构件不直接调用的一个过程,二十触发或广播一个或多个事件
+
+
+#### 隐式调用的优缺点
+- 优点
+    1. 为软件重用提供了强大的支持. 当需要将一个构件加入现存系统中时,只需要将它注册到系统的事件中
+    2. 为改进系统带来方便。当用一个构件代替另一个构件时，不会影响到其他构建的接口
+- 缺点
+    1. 构件放弃了对系统计算的控制.
+        一个构件触发一个事件时，不能确定其他构建是否会影响它。即使知道了事件注册了那些构件的过程,它也不能保证这些过程被调用的顺序
+        
+    2. 数据交换问题
+        有时数据可被一个事件传递,单另一些情况下,基于事件的系统必须依靠一个共享的仓库进行交互.全局性能和资源管理变成了问题
+    3. 既然过程的语义必须依赖于被触发事件的上下文约束.关于正确性的推理存在问题
+    
+
+
+### 虚拟机风格
+- 人为构建一个运行环境,在这个环境之上,可以解释与允许自定义的一些语言
+
+#### 解释器
+- 一个解释器通常包括完成解释工作的解释引擎
+    1. 被解释的代码的存储区
+    2. 记录解释引擎当前工作状态的数据结构
+    3. 记录源代码被解释执行的进度的数据结构
+- 典型例子: 专家系统
+
+#### 规则为中心
+- 基于规则的系统包括: 规则集、规则解释器、规则/数据选择器以及工作内存
+
+
+### 数据库风格
+- 数据库系统
+    中央共享数据源，保存当前系统的数据状态
+    多个独立处理元素，处理元素对数据元素进行操作
+- 超文本系统
+- 黑板风格
+    适合解决复杂的非结构化的问题,能在求解过程中综合运用多种不同知识源,使得问题的表达\组织和丘节变得容易
+    组成部分
+        1. 知识源
+            知识源中包含独立的、与应用程序相关的知识,知识源之间不直接进行通信，它们之间的交互只能通过黑板来完成
+        2. 黑板数据结构
+            黑板数据是按照与应用程序相关的层次来组织的解决问题的数据,知识源通过不断改变黑板数据来解决问题
+        3. 控制
+            控制完全由黑板的状态驱动,黑板状态的改变决定使用特定知识
+            
+            
+## 两层及三层C/S架构风格
+- C/S架构是基于资源不对等,且为实现共享而提出来的.
+- 两层C/S结构为: 单一服务器且以局域网为中心,难以拓展到大型企业广域网或Internet
+    问题
+        - 服务器的负荷太重，难以管理大量的客户机,系统的性能容易变差
+        - 数据安全性不好. 客户端程序可以直接访问数据库服务器,客户端计算机上的其他程序也可能访问数据库服务器
+
+- 三层C/S结构
+    三层C/S结构是将应用功能分成表示层、功能层、数据层
+    - 表示层
+        应用的用户接口部分,承担用户与应用间的对话功能
+        用于检查用户的输入,并显示应用输出的数据
+        检查的内容只限于数据的形式和取值范围,不包括有关业务本身的逻辑处理
+    - 功能层
+        相当于应用的本体,它是将具体的业务处理逻辑编入程序中.
+        需要处理的数据从表示层或数据层获得.
+        表示层和功能层之间的数据交换需要尽可能简洁
+    - 数据层
+        数据库管理系统.
+        负责管理对数据库的读写,
+
+## B/S 架构风格
+浏览器/服务器
+### 对比 C/S 架构
+- B/S架构的不足
+    1. B/S 架构缺乏对动态页面的支持能力,没有集成有效的数据库处理功能
+    2. 采用B/S架构的应用系统,在数据查询等响应速度上低于C/S架构
+    3. B/S架构的数据提交一般以页面为单位,数据的动态交互性不强,不利于在线事务处理(OLTP)应用
+    
+    
+## MVC 架构风格
+- Model View Controller 模型-视图-控制器
+- 各个部分的分工与协助
+    1. Model 是对应用状态和业务功能的封装
+        model 接受controller的请求并完成相应的业务处理,在状态改变的时候想view发出相应的通知
+    2. View shi
