软件架构设计

--- a/软件架构设计/软件架构设计.md
+++ b/软件架构设计/软件架构设计.md
@@ -240,4 +240,33 @@
 - 各个部分的分工与协助
     1. Model 是对应用状态和业务功能的封装
         model 接受controller的请求并完成相应的业务处理,在状态改变的时候想view发出相应的通知
-    2. View shi
+    2. View 实现可视化界面的呈现并捕获最终用户的交互操作
+    3. view 捕获到用户交互操作后会直接转发给controller, controller 完成UI逻辑
+        如果涉及到业务功能的调用 controller 会直接调用model,
+        在完成处理后 controller 会根据需要控制原VIEW 或创建新的view对用户交互操作完成响应
+        
+
+## MVP 
+- 优点
+    1. 模型与视图完全分离
+    2. 更高效的使用model
+    3. 我们将一个 presenter 用户多个视图, 而不改变 presenter 的逻辑
+    4. 吧逻辑放在 presenter 中, 那么我们就可以脱离用户接口来测试这些逻辑
+- 缺点
+    1. 视图渲染在presenter中,视图和 presenter 的交互过于频繁
+    2. 视图和 presenter 关系过于密切
+    
+    
+## 面向服务的架构
+### 定义
+w3c: SOA是一种应用程序架构,在这种架构中,所有功能都定义为独立服务,这些服务带有定义明确的可调用接口,能够以定义好的顺序调用这些服务来组成业务流程
+service-architecture.com: 服务是准确定义、封装完善、独立于其他服务所处环境和状态的函数.
+    SOA本质上是服务的集合,服务之间彼此通信,这种通信可能是简单数据传输也可能是两个或更多的服务协调进行某些活动
+    
+### soa设计原则
+1. 明确定义的接口
+    服务请求者依赖于服务规约来调用服务,因此
+2. 自包含和模块化
+3. 粗粒度
+4. 松耦合
+5. 互操作性
