软件架构设计

--- a/软件架构设计/软件架构设计.md
+++ b/软件架构设计/软件架构设计.md
@@ -265,8 +265,41 @@ service-architecture.com: 服务是准确定义、封装完善、独立于其他
     
 ### soa设计原则
 1. 明确定义的接口
-    服务请求者依赖于服务规约来调用服务,因此
+    服务请求者依赖于服务规约来调用服务.
+    因此服务定义必须长时间稳定,一旦公布,不能随意更改;
+    服务服务的定义应尽可能明确,减少请求者的不适当使用,不让请求者看到服务内部的私有数据
+    
 2. 自包含和模块化
+    服务封装了在业务上稳定,重复出现的活动和构件,实现服务的功能实体是完全独立自主的,独立进行部署、版本控制、自我管理和恢复
 3. 粗粒度
+    服务数量不应该太多,依靠消息交互而不是远程过程调用,通常消息量比较大,但是服务之间的交互频度较低
 4. 松耦合
-5. 互操作性
+    服务请求者可见的是服务的接口,其位置、实现技术、当前状态和私有数据等对服务请求者而言不可见
+5. 互操作性、兼容和策略声明
+    为了确保服务规约的全面和明确,策略成为一个越来越重要的方面
+    
+### 服务构件与传统构件
+1. 服务构件往往是粗粒度的，而传统构件以细粒度居多
+2. 服务构件的接口是标准的,主要是服务描述语言接口, 而传统构件通常以具体API形式出现
+3. 服务构件的实现与语言无关,传统构件通常绑定某种特定语言
+4. 服务构件可以通过构件容器提供QoS的服务,而传统构件完成由程序代码直接控制
+
+### SOA的关键技术
+- 与SOA紧密相关的技术 UDDI\WSDL\SOAP\REST...
+#### UDDI
+- 统一描述、发现和集成.
+- UDDI提供了一种服务发布、查找、定位的方法,是服务的信息注册规范
+- UDDI 技术规范主要包含一下三个内容
+    1. 数据模型
+        UDDI数据模型用于描述业务组织和服务的xml schema
+    2. API
+        UDDI API 是一组用于查找或发布UDDI数据的方法, UDDI API 基于 SOAP
+    3. 注册服务
+        UDDI 注册服务是SOA中的一种基础设施,对应着服务注册中心的角色
+
+
+#### WSDL
+- web服务描述语言
+- WSDL 是服务描述语言, 它基于xml语法定义.
+    WSDL 描述的重点是服务, 它包含服务实现定义和服务接口
+    
