软件架构设计

--- a/软件架构设计/软件架构设计.md
+++ b/软件架构设计/软件架构设计.md
@@ -302,4 +302,395 @@ service-architecture.com: 服务是准确定义、封装完善、独立于其他
 - web服务描述语言
 - WSDL 是服务描述语言, 它基于xml语法定义.
     WSDL 描述的重点是服务, 它包含服务实现定义和服务接口
+    采用抽象接口定义对提高系统的可拓展性有帮助.
+#### SOAP
+- 简单对象访问协议
+- SOAP 定义了服务请求者和服务提供者之间的消息传输规范.
+- 四个部分
+    1. 封装
+        SOAP 封装定义了一个整体框架,用来表示消息中包含了什么内容，谁来处理这些内容,以及这些内容是可选的还是必须的
+    2. 编码规则
+        SOAP 编码规则定义了一种序列化机制,用于交换系统所定义的数据类型的实例
+    3. RPC 
+        SOAP RPC 表示定义了一个用来表示远程过程调用和应答的协议
+    4. 绑定
+        SOAP 绑定定义了一个使用底层传输写一来完成在节点之间交换SOAP封装的约定
     
+- SOAP 消息基本上是从发送端到接收端的单项传输,SOAP 消息包含如下三个内容
+    1. 封装。 封装的元素名: Envelope
+    2. SOAP 头, Header
+    3. SOAP 体 , Body
+
+#### rest
+- 表述性状态转移.
+- 设计概念和准则
+    1. 网络上的所有事物都被抽象为资源
+    2. 每个资源对应一个唯一的资源标识
+    3. 通过通用的连接件接口对资源进行操作
+    4. 对资源的各种操作不会改变资源的标识
+    5. 所有操作都是无状态的
+    
+### SOA 的实现
+- SOA是一种概念和思想.
+- SOA 是用本地计算模型来实现的一个分布式计算机应用
+- CORBA、DCOM、EJB 都是解决方式
+
+#### web service
+- 在 web service 解决方案中由三种角色
+    1. 服务提供者(必选)
+        服务提供者是服务的所有者，该角色负责定义并实现服务
+    2. 服务请求者(必选)
+        服务请求者是服务的使用者.
+    3. 服务注册中心(可选)
+        服务注册中心是链接服务提供者和服务请求的纽带,服务提供者在此发布他们的服务描述,而服务请求者在服务注册中心查找他们所需要的服务.
+        
+    
+- web service 的操作
+    1. 发布
+        为了使用户能够访问服务,服务提供者需要发布服务描述，以便服务请求者可以找到它
+    2. 查找
+        在查找操作中,服务请求者直接检索服务描述或在服务注册中心查询所要请求的服务类型
+        对服务请求者而言，会在生命周期的两个不同阶段去做查找操作
+            1. 设计阶段
+                为了程序开发而查找服务的接口描述,
+            2. 运行阶段
+                为了调用而查找服务的位置描述
+    3. 绑定
+        在绑定操作中,服务请求者使用服务描述中的绑定细节来定位、联系并调用服务，从而在运行时与服务进行交互》
+        绑定的分类
+            1. 动态绑定
+                服务请求者通过注册中心查找服务描述,并动态的与服务交互
+            2. 静态绑定
+                服务请求者已经与服务提供者达成默契，通过本地文件或其他方式与服务进行绑定(固定ip访问策略)
+
+- 六个层次
+    1. 底层传输层
+        底层传输层主要负责消息的传输机制,http jmc smtp 都可以作为服务的消息传输协议
+    2. 服务通信协议层
+        主要功能:描述并定义服务之间进行消息传递所需的技术标准
+            - 常用标准
+                1. soap
+                2. rest
+    3. 服务描述层
+        主要以一种统一的方式描述服务的接口与消息交换方式
+            - 标准: wsdl
+    4. 服务层
+        将遗留系统进行包装，并通过发布WSDL接口描述被定位和调用
+    5. 业务流程层
+        支持服务发现，服务调用，点到点的服务调用,并将业务流程从服务的底层调用抽象出来
+    6. 服务注册层
+        主要功能: 使服务提供者能够通过WSDL发布服务定义，并支持服务请求者查找所需的服务信息
+            - 标准: UDDI
+
+#### 服务注册表
+- service registry 。
+- 服务注册表主要提供一个策略执行点, 在这个点上服务可以在SOA中注册，从而可以被发现和使用
+- 服务注册表包括
+    1. 有关服务
+    2. 相关构件的配置
+    2. 依从性
+    3. 约束文件
+- 常用功能
+    1. 服务注册
+        服务注册是指服务提供者向服务注册表发布服务的功能.
+        包含属性
+            1. 服务身份
+            2. 未知
+            3. 方法
+            4. 绑定
+            5. 配置
+            6. 方案
+            7. 策略
+        **限制那些新服务可以向注册表发布,由谁发布以及谁批准和根据什么调价批准,以便服务有序注册**
+    2. 服务位置
+        服务位置帮助服务使用者查询已注册的服务,寻找符合自身要求的服务.
+    
+    3. 服务绑定
+        服务使用者利用查找到的服务合约来开发代码,开发的代码将与注册的服务进行绑定,调用注册的服务,以及与他们实现活动
+        
+        
+        
+#### 企业服务总线
+- ESB功能如下
+    1. 支持异构环境中的服务、消息、基于事件的交互，并且具有适当的服务级别和可管理性
+    2. 使用ESB,可以在几乎不更改代码的情况下,以一种无缝的非入侵方式使现有系统具有全新的服务接口,并能够在部署环境中支持任何标准
+    3. 提供诸如服务代理和协议转换等功能
+    4. 提供可配置的消息转换翻译机制,基于消息内容的消息路由服务,传输消息到不同的目的地
+    5. 提供安全和拥有者机制,保证消息和服务使用的认证、授权和完整性
+- ESB 的优势
+    1. 扩展的、基于标准的链接
+    2. 灵活的、服务导向的应用组合
+    3. 提高复用率、降低成本
+    4. 减少市场反应时间、提高生产率
+    
+#### 微服务
+- 微服务中每个服务都是一个组件, 通过编排组合的方式来使用,从而真正做到了独立、解耦、组件化、易维护、可复用、可替换、高可用、最终达到提高交付质量、缩短交付周期的效果
+- 微服务通常采用轻量级的通信机制(HTTP协议的RESTfulAPI),每个服务都围绕着具体业务进行构建,并且能够独立部署到生产环境
+
+- 优势
+    1. 技术异构性
+        在微服务架构中,每个服务都是以给相对独立的个体,每个服务都可以选择适用于自生的技术来实现
+        - 对比传统单块的系统而言,采用新语言、数据库或者框架都会对整个系统产生巨大的影响。在微服务中我们完全可以只在一个微服务中采用新技术，等到技术成熟后在推广到启发服务
+    2. 弹性
+        弹性主要讲的是系统中一部分出现故障会引起多大问题. 在单块系统中，一个部分出现问题，可能导致整体系统的问题.而微服务架构中,每个服务可以内置可用性的解决方案与功能降级方案，所以比单块系统强
+        
+    3. 拓展
+        单块系统中,我们要做拓展,往往是整体进行拓展,在微服务架构中可以针对单个服务进行拓展
+    4. 简化部署
+        在大型单块系统中，即使修改一行代码,也需要重新部署整个应用系统.
+        这种部署的影响很大、风险很高,因此不敢轻易的重新部署.在微服务架构中,每个服务都是独立部署,这样可以更快的对特定部分的代码进行部署
+    5. 与组织结构更匹配
+    6. 可组合性
+        在微服务架构中,系统会开放很多接口供外部使用,当情况发生改变时,可以使不同的方式构建应用,而整体化应用程序只能提供一个非常粗粒度的接口供外部使用
+    7. 对可替代性的优化
+    
+- 挑战
+    1. 分布式系统的复杂度
+        使用微服务实现分布式系统的复杂度要比单块系统高
+    2. 维护成本
+        相比传统的单块架构应用,微服务将系统分成多个独立的部分,每个部分都是可以独立部署的业务单元.
+        意味着,单块架构的集中式部署、配置、监控或者日志收集等方式,在微服务架构下随着服务数量增多,每个服务都需要做上述操作,因此成本指数级增加
+    3. 部署自动化
+        
+    4. DevOps 与组织结构
+    5. 服务间依赖测试
+        由于服务架构是把系统拆分为若干个可独立部署的服务，所以需要进行服务间的依赖测试
+    6. 服务间依赖管理
+        传统的单块系统,功能实现比较集中,大部分功能都在一个应用中,同其他系统依赖较少.为父架构将系统功能拆分成互相协作的独立服务后,随着微服务个数增多,如何有效的展现出服务之间的依赖关系成为了挑战
+
+
+## 架构设计
+- 演变交付生命周期
+- 属性驱动设计法
+    先建立软件架构,再把架构作为骨架,在骨架上循环迭代, 属性驱动设计法(ADD)
+    输入: 功能需求(一般表示为用例)、限制条件和质量需求(一组特定于系统的质量场景)
+    步骤
+        1. 选择需要分解的模块. 通常是整个系统,从系统开始,然后分解为子系统,进一步将子系统分解为子模块
+        2. 根据如下步骤对模块求精
+            从具体的质量场景和功能需求集中和选择架构驱动因素.
+            先满足重要的,在满足不重要的,针对架构需求有优先级
+        3. 对需要进一步分解的每个模块重复上述步骤
+- 按架构组织开发团队
+- 开发股价系统
+- 利用商用构件进行开发
+
+## 软件架构文档化
+- 记录软件架构的活动就是架构编档过程,也就是架构的文档化
+    1. 过程,编档过程能促使架构设计师进一步的思考,使得架构更加完善
+    2. 结果,描述架构的文档将作为架构开发的成果,共项目关系人使用
+
+1. 架构文档的使用者
+    架构文档的使用这是架构的项目关系人.
+2. 合理的编档规则编写架构文档和编写其他文档一样,也需要遵守一些基本规则.
+    1. 从读者的角度编写文档
+    2. 避免出现不必要的重复
+    3. 避免歧义
+    4. 使用标准结构
+    5. 记录基本原理
+    6. 文档保持更新, 但更新频率不要过高
+    7. 针对目标的适宜性对文档进行评审
+3. 视图编档
+    1. 视图概述
+        对系统进行概括性的描述,包含视图的主要元素和元素之间的关系
+    2. 元素目录
+        对主要表示中所描述的元素及其关系进行详细描述
+    3. 上下文图
+        用图形展示系统如何与其环境相关
+    4. 可变性指南
+        描述架构的可变化点
+    5. 架构背景
+        为架构的合理性提供足够的、令人信服的论据
+            基本原理、分析结果
+    6. 术语表
+        对每个属于进行简要说明
+    7. 其他信息
+        描述不属于架构方面的必要信息
+        
+4. 跨试图文档
+5. UML
+6. 软件架构重构
+    重构的主要活动
+        1. 信息提取
+        2. 数据库构造
+            将提取的信息转化为标准的形式,并放入数据库
+        3. 视图融合
+            将数据库中的信息组合到一起,生成该架构的一个内聚视图
+        4. 重构
+            构件数据抽象和各种表示以生成架构表示
+                可视化、交互、模式定义、识别
+        
+
+## 软件架构评估
+- 基于问卷或检查表
+    该方式的关键是要如何设计问卷,缺点: 依赖评估人的主观判断
+- 基于场景
+    通过分析软件架构对场景的支持度，从而判断该架构对这一场景所代表的质量需求的满足程度
+   
+- 基于度量
+    它是建立在软件架构度量的基础上,三个基本活动
+        1. 需要建立质量属性和度量之间的映射原则. 即确定怎样从度量结果中退出系统具有什么样的质量属性
+        2. 从软件架构文档中获取度量信息
+        3. 根据映射原则分析推导出系统的质量属性
+        
+### 架构的权衡分析法
+#### ATAM 产生如下结果
+- 一个简洁的构件描述
+    ATAM 的一个要求是在一个小时内表述架构,这样就得到了一个简介、可理解、面向普通关系人的架构表述. 他是从架构文档中提炼形成
+- 表述清楚的业务目标
+- 采用场景集合捕获质量需求
+- 架构决策到质量映射的需求
+- 所确定的敏感点和权衡点的集合
+    - 这个集合是一些对一个或多个质量属性具有显著影响的架构决策
+- 有风险决策和无风险决策
+- 风险主题的集合
+- 产生一些附属结果
+- 产生一些无形结果
+
+#### ATAM 的步骤
+1. ATAM 方法表述
+2. 商业动机的表述
+3. 架构的表述
+4. 对架构方法进行分类
+5. 生成质量属性效用树
+6. 分析架构方法
+7. 集体讨论并确定场景的优先级
+8. 分析架构方法
+9. 结果表述
+
+结果 
+    1. 已编写了文档的架构方法
+    1. 经过讨论得到的场景集合及其优先级
+    1. 效用树
+    1. 所发现的有风险策略
+    1. 已编成文档的无风险策略
+    1. 所发现的敏感点和权衡点
+
+
+#### 成本效益分析法
+- CBAM 在ATAM上构建
+
+- 步骤
+    1. 整理场景
+    2. 对场景进行求精
+    3. 确定场景优先级
+    4. 分配效用
+    5.架构策略涉及那些质量属性及响应级别
+    6. 使用内插法确定期望的质量属性影响级别的效用
+    7. 计算各架构策略的总收益
+    8 根据ROI选择架构策略
+    
+## 构件及其复用
+### 定义
+    1. 构件是指软件系统中明确辨识的构成成分
+        可复用构件是指具有相对独立的功能和可复用价值的构件
+    2. 构件是一个组装单元,它具有约定式规范的接口及明确的依赖环境
+    3. 构件是软件系统中具有相对独立功能、可以明确辨识、接口由契约指定和语境由明显依赖关系、可独立部署的可组装软件实体
+    
+    
+### 商用构件标准规范
+- CORBA 公共对象请求代理框架,三个层次
+    1. 对象请求代理
+    2. 公共对象服务
+    3. 公共设施
+    用于开发和配置分布式应用的服务器端构件模型规范
+        1. 抽象构建模型
+            用以描述服务端构件结构及构件间互操作的结构
+        2. 构件容器结构
+            用以提供通用的构件运行和管理环境，并支持安全、事务、持久态等系统服务的集成
+        3. 构件的配置和打包规范
+            CCM 使用打包技术来管理构件的二进制,多语言版本的可执行代码和配置信息,并定制了构件包的具体内容和文档内容标准
+            
+- J2EE
+- DNA 2000
+
+
+
+## 产品线及系统演化
+
+### 复用与产品线
+可复用的内容  
+    1. 需求
+    1. 架构设计
+    1. 元素
+    1. 建模与分析
+    1. 测试
+    1. 项目规划
+    1. 样本系统
+    1. 缺陷消除
+
+#### 产品线架构
+- 基于产品线的架构,相交单个产品架构有三个特点
+    1. 产品线架构必须考虑一系列明确许可的变化
+    2. 产品线架构一定要文档化
+    3. 产品线架构必须提供"产品创建者指南",描述架构的实例化过程
+- 需要考虑的几个面
+    1. 确定变化点
+    2. 支持变化点
+    3.对唱片线架构的适宜性进行评估
+
+- 产品线的开发模型
+    1. 前瞻性产品线
+    2. 反应性产品线
+
+
+#### 特定领域架构
+- 特定领域软件架构的特征
+    1. 一个严格定义的问题域或解决域
+    2. 具有普遍性
+    3. 具备该领域固定的、典型的在开发过程中可复用元素
+    - 从功能覆盖的范围角度可以分为
+        1. 垂直域: 定义了一个特定的系统族,导出在该领域中可作为系统的可行解决方案的一个通用软件架构
+        2. 水平域: 定义了在多个系统和多个系统族中功能区域的共有部分,在子系统级上涵盖多个系统(族)的特定部分功能
+        
+        
+        
+- DSSA 的主要活动
+    1. 领域分析
+        主要目标是活的领域模型
+    2. 领域设计
+        主要目标获得DSSA
+    3. 领域实现
+        主要目标是依据领域模型和DSSA 开发与组织可复用信息
+        
+- 领域模型的主要作用
+    1. 领域模型为需求定义了知识领域和领域词汇，这较之单一的项目需求更友好的大局观
+    2. 软件界面的设计往往和领域模型关系密切
+    3. 领域模型的合理性将严重影响软件系统的可拓展性
+    4. 在分层架构的指导下，领域模型精化后即成为业务层的骨架
+    5. 领域模型也是其数据模型的基础
+    6. 领域模型是团队交流的基础,它规定了重要的领域词汇表，并且这些词汇的定义是严格的、大家认可的
+    
+
+#### 架构及系统演化
+- 需求变动归类
+- 定制架构演化计划
+- 修改、增加或删除构件
+- 更新构件的互相作用
+- 构件组装与测试
+- 技术评审
+- 产生演化后的架构
+
+
+## 软件架构试图
+- 三种类型
+    1. 模块视图类型
+        为系统的主要模块实现单元编档
+    2. 构件和连接件视图类型
+        为系统的构件和连接件执行单元编档
+    3. 分配视图类型
+        为软件的开发和执行环境之间的关系编档
+        
+### 模块视图
+1. 分解风格能展示向模块分配责任的方式
+2. 使用风格能展示模块相互依赖的方式
+3. 分层风格能将系统分割成一组虚拟机,通过允许使用关系互相关联,分层风格能帮助实现可移植性和可修改性
+4. 泛化风格还能展示一个模块如何成为另一个模块的泛化或特化,从而使模块之间产生关联
+
+
+### c&c 视图类型及其风格
+- 管道和过滤器风格中的交互模式表现出数据流连续变换的特征
+- 共享数据风格通过保留持久数据来支配交互模型,持久数据由多个数据存取器和至少一个存储库保留
+- 发布-订阅风格用于向一组未知接受者发送事件和消息
+- 客户机-服务器风格能展示构件通过请求其他构件的服务进行交互的过程,将功能划分成客户机和服务器后可基于运行时准则把他们单独分配给各个级
+- 对等链接系统能够通过构件之间的直接交换支持服务交换.是一种调用/返回风格
+- 通信-进程风格的特征表现在通过各种连接件机制并发执行构件的交互
