--- a/设计模式/设计模式.md
+++ b/设计模式/设计模式.md
@@ -63,3 +63,13 @@
     - state
     - strategy
     - visitor
+
+
+## facade 模式
+- 解决这样一个问题
+    在一个程序中会调用若干个子系统,在不做处理的时候需要了解每个子系统的接口，并使用这些接口进行调用
+    facade 模式通过在原有程序和若干个子系统上创建一层风法，封装这些子系统的接口，提供对外的一致性接口    
+    
+    
+## mediator 中介模式
+- 在一个复杂系统中会有很多对象, 这些对象之间会互相通讯，从而造成对象的互相依赖, 修改其中一个对象会影响若干个对象
