--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -4,19 +4,89 @@
 - 操作系统的定义: 操作系统是计算机系统中的核心系统软件,负责管理和控制计算机系统中的硬件和软件资源
 ### 操作系统分类
 1. 批处理操作系统
+    把用户提交的作业分类,把一批作业编成一个作业执行序列.
+    批处理又可以分为联机批处理和脱机批处理
+    特征：用户脱机使用计算机、成批处理、多道程序运行
 2. 分时操作系统
+    采用分时技术,使多个用户同时以绘画方式控制自己程序运行,每个用户都感到似乎各自有一台独立的、支持自己请求服务的系统
+    分时技术把处理机的运行时间分成很短的时间片, 按时间片轮流把处理机分配给各个联机作业使用.
+    若某个作业在分配给它的时间片内不能完成作业,则改作业暂时中断, 处理机让给另一个作业使用,未完成的作业等待下一轮在继续作业,直到作业完成.
+    特征: 交互性、多用户同时性、独立性
 3. 实时操作系统
+    实时操作系统往往是专用的, 系统与应用难以分离. 
+    实时操作系统并不强调资源利用率，更关心及时性、可靠性和完整性
+    特性: 提供即时响应、高可靠性
 4. 网络操作系统
+    网络操作系统按照网络架构的各个协议标准进行开发，包括网络管理、通信、资源共享、系统安全和多种网络应用服务等.
+    特征： 互操作性、协作处理
 5. 分布式操作系统
+    分布式操作系统要求一个统一的操作系统，实现系统操作的统一性，负责全系统的资源分配和调度，为用户提供统一的界面
+    
 6. 嵌入式操作系统
 7. 微内核操作系统
 8. ...
+
+### 操作系统的结构
+- 操作系统的结构可分为**无序结构、层次结构、面向对象结构、对称多出力结构和微内核结构**
+1. 无序结构
+    **无序结构又称为整体结构或模块组合结构**
+    它以大型表格和队列为中心，操作系统的各个部分的程序围绕表格运行，整个系统是一个程序。这种操作系统通常称为面向过程的操作系统。
+    操作系统由许多标准的、可兼容的基本单位构成，各模块相对独立，模块之间通过规定的接口互相调用。
+    模块化设计方法的优点: 缩短系统开发周期, 缺点: 模块之间调用关系复杂\相互依赖，分析、移植和维护系统较容易出错
+
+2. 层次结构
+    把一个大型复杂的操作系统分解成若干个**单向依赖**的层次,由多层的正确性保证操作系统的可靠性.层次结构清晰，简化了接口的设计，且有利于系统功能的增加或减改，易于保证可靠性、便于维护和移植.
+    
+    
+3. 面向对象结构
+    在计算机系统中对象是操作系统管理的信息和资源的抽象,是一种抽象的数据类型.
+    
+4. 对称多处理结构
+    如果一个操作系统在系统中的所有处理机运行且共享同一内存,这样的系统就是一个对称多处理系统。
+    优点: 适合共享存储器结构的多处理机系统
+    
+    
+
+5. 微内核结构
+    把系统的公共部分抽象出来,形成一个底层核心, 提供最基本的服务,其他功能以服务器的形式建立在微内核之上
+    微内核结构由一个非常简单的硬件抽象层和一组比较关键的原语或系统调用组成，原语仅包括了建立一个系统必须的部分
+        1. 线程管理
+        2. 地址空间
+        3. 进程间通讯
+    微内核的目标是将系统服务的实现和系统的基本操作规则分离.
+    技术优点
+        1. 统一的接口，在用户态和核心态之间无需进程识别
+        2. 可伸缩性好，能适应硬件更新和应用变化
+        3. 可移植性好, 所有与具体机器特征相关的代码,全部隔离在微内核中,如果操作系统要移植到不同的硬件平台上,只需要修改微内核中的代码即可
+        4. 实时性好, 微内核可以方便地支持实时处理
+        5. 安全性，可靠性搞，微内核将安全性作为系统内部特性来进行设计. 对外仅使用少量应用编程接口
+        6. 支持分布式系统, 支持多处理器的架构和高度并行的应用程序
+        7. 面向对象的操作系统
+    
+
+### 两种工作状态
+1. 核心态
+2. 用户态
+- 我们使用的应用程序公仔用户态,而内核模块和最基本的操作系统核心工作在核心态    
+    
+
+
+
+### 操作系统的五个基本功能
+1. 处理机管理
+2. 存储管理
+3. 设备管理
+4. 文件管理
+5. 作业管理
 
 
 ## 操作系统基本原理
 - 操作系统的主要功能是: **进行处理机与进程管理、存储管理、设备管理、文件管理和作业管理的工作**
 
+
 ### 进程管理
+
+#### 三态模型
 - 进程的状态
     1. 就绪状态
         - **当进程已分配了除CPU以外的所有必要资源后,只要获得处理机就可以执行**.此时的状态就是就绪状态.
@@ -30,10 +100,50 @@
     
 - 进程状态的变化
     1. 运行态->等待态
-    2. 等待态->就绪态 
+        等待使用资源
+    2. 等待态->就绪态
+        资源以满足要求 
     3. 运行态->就绪态
+        运行时间片到
     4. 就绪态->运行态
-    
+        CPU 空闲时选择一个就绪进程
+
+
+### 信号量与PV操作
+- 信号量: 一种特殊的变量,表现形式是一个整形S和一个队列
+- P操作: S= S-1 若 S<0 进程暂停执行,进入等待队列
+- V操作: S=S+1 若 S<=0 唤醒等待队列中的一个进程
+
+#### 互斥控制
+- 互斥控制是为了保护共享资源, 不让多个进程同时访问这个共享资源.
+
+
+### 死锁
+- 死锁是指多个进程之间互相等待对方资源,而在得到对方资源之前又不释放自己的资源,造成循环等待.
+
+#### 死锁的必要条件
+1. 互斥条件: 即一个资源每次只有一个进程使用
+2. 保持与等待条件: 有一个进程已经获得资源,单因请求其他资源时被阻塞,持有该资源者不释放
+3. 不可抢占条件: 有些系统资源是不可抢占的, 当某个进程以获得这类资源后,系统不能强行收回，只能由进程使用完是自己释放
+4. 循环等待条件: 若干个进程形成环形链,每个资源都占用对方申请的资源
+
+
+
+#### 银行家算法
+- 在分配资源之前先确认资源分配后是否会导致系统死锁,如果不会死锁就分配.
+- 分配原则
+    1. 当一个进程对资源的最大需求量不超过系统中的资源数时可以接纳该进程
+    2. 进程可以分期请求资源，但请求的总数不能超过最大需求量
+    3. 当系统现有的资源不能满足进程尚需资源数时,对进程的请求可以推迟分配,但总能使进程在有限的时间里得到资源
+    4. 当系统现有的资源能满足进程尚需资源数时, 必须测试系统现存的资源能否满足该进程尚需的最大资源数,若能满足则按当前的申请量分配资源，否则也需要推迟分配
+
+
+#### 死锁的解决策略
+1. 死锁预防: 破坏死锁的必要条件中的任意一个
+2. 死锁避免: 是指进程在每次申请资源是判断这些操作是否安全
+3. 死锁检测: 死锁检测判断系统是否处于死锁状态
+4. 死锁解除: 将某进程拥有的资源强行收回,分配给其他进程
+
 
 ### 存储管理
 - 存储管理是对**内存储器的管理,负责对内存的分配和回收、内存的保护和内存的扩充**
@@ -69,6 +179,8 @@
 3. 充分发挥硬件资源,将I/O设备尽可能处于使用中状态，并且CPU 等待时间少
 
 ### 文件管理
+- 文件管理是
+
 
 #### 文件的逻辑结构
 1. 顺序文件
