--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -147,27 +147,68 @@
 
 ### 存储管理
 - 存储管理是对**内存储器的管理,负责对内存的分配和回收、内存的保护和内存的扩充**
-#### 页式存储管理
+
+### 存储组织
+- 虚拟存储器可以分为**单一连续分区、固定分区、可变分区、可重定向分区、页式、段式、段页式**
+
+
+#### 单一连续分区
+- 把所有用户区都分配给唯一的用户作业. 当作业被调度时, 进程全部进入内存,一旦完成,所有内存恢复空闲,因此它不支持多道程序设计
+
+#### 固定分区
+- 支持多道程序设计的最简单的存储管理方法.
+- 把内存划分成若干个固定的和大小不同的分区，每个分区能够装入一个作业,分区的大小是固定的,算法简单,但容易生成较多的存储器碎片
+
+#### 可变分区
+- 引入可变分区后虽然内存分配更加灵活,也提高了内存利用率,但是由于系统不断地分配和回收必然会出现一些不连续的小的空闲区.
+- 解决空闲区(碎片)的方法式拼接(紧凑),向一个方向移动已分配的作业,使那些零散的小空间区在另一方向练成一片.
+- 分区的拼接技术一方面要求能够对作业进行重定位,另一方面系统在拼接式要耗费较多的时间
+
+#### 可重定位分区.
+- 它能够把相邻的空闲存储空间合并成一个完整的空区,还能够整理存储器内各个作业的存储未知，以达到消除存储碎片和紧缩存储空间的目的.
+- 紧缩工作需要花费大量的时间和系统资源
+
+
+#### 页式
+- 基本原理: 将各进程的虚拟空间划分成为若干个长度相等的页，把内存空间以与页相等的大小划分为大小相等的片或页面,采用请求调页或预吊页技术实现内外村的统一管理
+- 优点: 利用率高,产生的内存碎片小,内存空间分配及管理简单
+- 缺点: 相应的硬件支持，增加系统开销,请求调页的算法如果不当,可能产生抖动现象
+
 - 基本思想:
     把程序的逻辑空间和内存的物理空间按照同样的大小划分成若干个页面,并以页面为单位进行分配.
     在页式存储管理中,系统中的虚地址是一个有序对.
-- 页面调度算法(淘汰机制)
+    
+
+        
+    
+#### 段式
+- 一个作业是由若干个具有逻辑意义的段组成.
+    在短时存储管理中,允许程序占据内存中若干分离的分区.
+    分段系统中的虚地址是一个有序对。
+- 优点: 便于多道程序共享内存，便于对存储器的保护,各段程序修改互不影响
+- 缺点: 内存利用率低,内存碎片浪费大
+
+
+#### 段页式. 
+- 分段式和分页式结合的存储管理方法.
+
+
+
+
+### 存储管理
+- 在虚拟存储器的管理中,涉及**载入(调入)、放置(放入分区)和置换等问题**
+- 调入策略: 何时将一页或一段从外存中调入内存. 
+    1. 请求调入法,即需要使用时调入
+    2. 先行调入法,将预计要使用的页、段先行调入内存
+- 防止策略: 调入后,放在内存的什么未知
+- 页面调度算法(淘汰机制\置换策略)
     1. OPT 最优算法:
         选择不再使用或最远的将来才使用的页
     2. RAND 随机算法
         随机的选择需要淘汰的页
     3. FIFO 先进先出
-        
+        淘汰在内存中驻留时间最长的
     4. LRU 最近最少使用
-        
-    
-#### 段式存储管理
-- 基本思想:
-
-
-
-#### 段页式存储管理
-
 
 ### 设备管理
 
@@ -179,7 +220,7 @@
 3. 充分发挥硬件资源,将I/O设备尽可能处于使用中状态，并且CPU 等待时间少
 
 ### 文件管理
-- 文件管理是
+- 文件管理是对外部存储设备上的以文件方式存放的信息的管理
 
 
 #### 文件的逻辑结构
@@ -190,10 +231,120 @@
 4. 直接文件
 
 
+#### 文件的逻辑组织
+- 文件的逻辑结构可以分为无结构的字符流文件和有结构的记录文件
+常用记录式结构
+1. 连续结构
+    连续结构是一种按照记录生成的先后顺序排列的逻辑结构
+    特点: 适用性强，可用于所有文件，且记录的排列顺序与记录的内容无关
+    缺点: 搜索性能较差
+2. 多重结构
+    多重结构把记录按键和记录名排列成行列式结构,一个包含n个记录名,m个键的文件构成 m*n 的行列式
+3. 转置结构
+    转置结构把含有相同键的记录指针全部指向该键,
+    转置结构适用于给定键后的记录搜索
+4. 顺序结构
+    顺序结构把文件中的键按规定的顺序排列起来
+    
+    
+- 常用存取方法
+    1. 顺序存取
+    2. 随机存取
+    3. 按键存取
+
+
+#### 文件的物理组织
+- 文件的物理结构是指文件在存储设备上的存储方法,常用的文件物理结构有**连续文件、串联文件、索引文件**
+
+
+##### 连续文件(顺序文件)
+- 连续文件式一种最简单的物理文件结构，他把一个在逻辑上连续的文件信息依次存放到物理块中.
+优点: 一旦知道文件在文件存储设备上的起始位置和文件长度,就能进行存取.
+    连续文件适合于顺序存取，在连续存取相邻信息时，存取速度快
+缺点: 在文件建立时必须指定文件的信息长度,以后不能动态增长,不适用于要经常修改的文件.
+
+##### 串联文件(链接文件)
+- 串联文件是用非连续的物理块来存放文件信息,这些物理块之间没有顺序关系,其中每个物理块都有一个执政,指向下一个物理块的地址,这样所有的物理块都被链接起来，形成一个链接队列
+优点: 解决存储器的碎片问题,提高存储空间利用率.
+缺点: 由于串联文件只能按照队列中的链接指针顺序查找,因此搜索效率低,一般只适用于顺序访问,不适用于随机存取
+
+##### 索引文件
+- 索引文件是另一种对文件存储不连续分配的方法. 为每个文件建立一张索引表，索引表中的每一表项目指出文件信息所在的逻辑块号和与之对应的物理块号
+    索引文件既可以满足文件动态增长的要求又可以方便的实现随机存取.
+    对一些大的文件，当索引表的大小超过了一个物理块时，会发生索引表的分配问题。采用多级(间接索引)技术,这时在由索引表指出的物理块中存放的不是文件住处二十存在文件信息的物理块地址.
+    
+优点: 顺序存取 和 随机存取都适用
+缺点: 索引表增加了存储空间的开销,在存取文件时至少要访问2词磁盘.一次访问索引表,另一次是根据索引表提供的物理块号访问文件信息
+
+
+
+#### 树形目录结构
+- 文件控制块的集合称为文件目录,文件目录也被组织成文件,通常成为目录文件
+- 在树形目录结构中,树的根节点为根目录,数据文件为叶子,
+- 系统在创建每一个目录时都会设定2个目录文件
+    1. `.` 代表目录自己
+    2. `..` 代表该目录的父目录
+    - 对于根目录 `.`和`..`都代表自己
+
+
+
 #### 文件分配策略
 1. 顺序分配
 2. 链接分配
 3. 索引分配
+
+
+### 存储空间管理
+- 由于文件存储设备是分成许多大小相同的物理块,并以块为单位交换信息,因此文件存储设备的管理实质上是对空闲块的组织和管理,它包括:空闲块的组织、空闲块的分配空闲块的回收.
+
+#### 空闲表法
+- 空闲表法属于连续分配,系统为外存上的所有空闲区建立一张空闲表,每个空闲区对应一个空闲表项,包括 **序号、第一空闲盘块号和空闲盘块数**
+
+#### 空闲链表法
+- 将所有空闲盘区，拉成一条空闲链,根据构成链所用的基本元素不同可以分为两种形式
+##### 空闲盘块链
+- 将磁盘上所有空闲区空间，以盘块为单位拉成一条链，
+    当用户创建文件而请求分配内存时,系统从链首开始,依次摘下适当数目的空闲盘块用来创建文件. 
+    当用户删除文件而释放存储空间时,系统将回收的盘块依次插入空闲盘块链的末尾,
+    
+##### 空闲盘区链
+- 将磁盘上所有空闲盘区拉成一条链,在每个盘区上包含若干用于指示下一个空闲盘区的指针,指明盘区大小的信息.
+    分配盘块时通常采用**首次适应算法(显示链接法)**.回收时要将回收区与空闲盘区相合并
+    
+    
+#### 位图法
+- 位图用二进制标识磁盘中的一个盘块的使用情况,0表示空闲,1表示已分配.磁盘上的所有盘块都与一个二进制位相对应,由所有的二进制为构成的集合,称为位图.
+    位图法的优点是容易找到一个或一组相邻的空闲盘块.
+    位图小,可以把它保存在内存中,从而节省磁盘的启动操作
+
+#### 成组链接法
+- 成组链接法将空闲表和空闲链表法组合形成的一种空闲盘块管理方法,适用于大型文件系统
+
+
+
+
+
+
+
+### 地址变换
+- 编程所用的地址称为逻辑地址(虚地址) , 而实际的内存地址则是物理地址(实地址).
+
+#### 静态重定位
+- 静态重定位是在需空间程序执行之前由装配程序完成地址映射工作.
+    静态重定位的优点是不需要硬件的支持
+    缺点是无法实现虚拟存储区,必须占用连续的内存空间且难做到程序和数据的共享
+
+
+#### 动态重定位
+- 动态重定位实在程序执行过程中，在CPU访问内存之前,将要访问的程序或数据地址转换为内存地址.
+    动态定位依靠硬件地址变换机构完成功能.
+    优点: 对内存非连续分配,提供虚拟存储器的基础，有利于程序段的共享
+
+
+
+
+
+
 
 ### 作业管理
 
@@ -206,3 +357,10 @@
     一个后背作业被作业调度程序选中,并分配了必要的资源进入了内存,且作业调度程序为其建立了相应的进程
 4. 完成状态
     当作业正常运行结束,它所占用的资源尚未完全被系统回收时的状态.
+    
+    
+#### 三级调度
+1. 高级调度
+    高级调度也称为作业调度,高级调度的主要功能是在批处理作业的后备作业队伍中选择一个或一组作业,为他们建立进程,分配必要的资源,使他们能够运行起来
+2. 中级调度
+3. 低级调度
