--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -317,6 +317,8 @@
     位图法的优点是容易找到一个或一组相邻的空闲盘块.
     位图小,可以把它保存在内存中,从而节省磁盘的启动操作
 
+
+
 #### 成组链接法
 - 成组链接法将空闲表和空闲链表法组合形成的一种空闲盘块管理方法,适用于大型文件系统
 
@@ -363,4 +365,42 @@
 1. 高级调度
     高级调度也称为作业调度,高级调度的主要功能是在批处理作业的后备作业队伍中选择一个或一组作业,为他们建立进程,分配必要的资源,使他们能够运行起来
 2. 中级调度
+    中级调度也称为交换调度，中级调度决定进程在内外存之间的调入、调出.其主要功能是在内存资源不足时将某些处于等待状态或就绪状态的进程调出内存,腾出空间后,再将外存上的就绪进程调入内存
 3. 低级调度
+    低级调度也称为进程调度,其主要功能时确定处理器在旧墟进程间的分配
+    
+#### 作业调度算法
+1. 先来先服务(FCFS)
+    按作业到达的先后顺序调度
+2. 短作业有限
+    按作业的估计运行使劲按调度,估计运行时间段的作业优先调度
+3. 响应比高者优先
+4. 优先级调度
+    根据作业的优先级别,优先级高的先调用
+    
+    
+### 设备管理
+- 设备管理程序主要提供以下功能
+    1. 提供和进程管理系统的接口
+    2. 进行设备分配
+    3. 实现设备和设备,设备和CPU等之间的并行操作
+    4. 缓冲区管理
+    
+
+### 网络操作系统
+- 功能
+    1. 提供高效可靠的网络通讯能力
+    2. 提供多项网络服务功能
+- 特征
+    1.硬件独立
+    2. 网络特性
+    3. 可移植性和可集成性
+    4. 多用户、多任务
+
+#### 网络操作系统的组成
+- 网络操作系统由**网络驱动程序\子网协议和应用层协议**
+1. 网络驱动程序
+   
+2. 子网协议
+
+3. 应用层协议
