--- a/数据库系统/数据库系统.md
+++ b/数据库系统/数据库系统.md
@@ -1,23 +1,101 @@
 # 数据库系统
 ## 三级抽象
 1. 用户级数据库
+    - 对应外模式
+        最接近用户的一级数据库,是用户看到和使用的数据库,又称用户试图。
+        用户级数据库主要由外部记录组成，不同用户视图可以互相叠加，用户的所有操作都是针对用户视图进行
+        一个数据库可以拥有多个不同的用户视图,每个用户视图由数据库某一部分的抽象表示所组成
 2. 概念级数据库
+    - 对应概念模式
+        介于用户级和物理级之间，是所有用户视图的而最小并集，是DBA看到的数据库,又称DBA视图
+        一个数据库系统只有一个DBA视图,他把数据库作为一个整体的抽象表示
+        概念级数据库,概念模式,吧用户视图有机的结合成一个整体,综合平衡考虑所有用户需求，实现数据的一致性，最大限度降低数据冗余，准确的反映数据间的联系
 3. 物理级数据库
+    - 对应内模式
+        它是数据库的底层表示，他描述数据的实际存储组织、是最接近于物理存储的级别
+        
+        
+        
 ## 三级模式
 1. 外模式
     描述用户看到或使用的那部分数据的逻辑结构
 2. 概念模式
     用来描述整个数据库中的逻辑结构.
 3. 内模式
+    内模式是整个数据库的最底层表示。
 
 ## 两级独立
 1. 逻辑独立
+    逻辑独立是指用户的应用程序与数据库中的逻辑结构是相互独立,当数据的逻辑结构发生变化时,应用程序不需要改变.
+    逻辑独立性存在于外模式和概念模式之间的映射转换,说明概念模式发生变化时应用程序的独立程度
 2. 物理独立
+    物理独立性是指用户的应用程序与存储在磁盘上的数据库中的数据相互独立.
+    当数据的物理存储改变时，应用程序不需要改变。
+    物理独立性存在于概念模式和内模式之间的映射转换,说明亲组织发生变化时应用程序的独立度
 
 ## 数据模型
 - 两种分类  
-    1. 概念类型(实体-联系模型)
-    2. 数据基本模型(结构数据模型)
+    1. 概念类型(实体-联系模型，概念数据模型)
+    2. 基本数据模型(结构数据模型)
+    
+    
+### 基本数据模型
+- 基本数据模型时按照计算机系统的观点来对数据和信息建模.主要用于 DBMS 实现.
+    基本数据模型时数据库系统的核心和基础，通常由**数据库结构、数据操作和完整性约束**三部分组成
+    常用的基本数据模型有:**层次模型、网状模型、关系模型、面向对象模型**
+    
+#### 层次模型
+- 用树形结构表示实体类型及实体间的联系.
+- 优点
+    - 记录之间的联系通过指针来实现,查询效率高
+- 缺点
+    - 只能表示一对多的情况
+    - 由于层次顺序的严格和复杂，导致数据的查询和更新操作复杂
+
+#### 网状模型
+- 用有向图表示实体类型及实体间的联系
+- 优点
+    - 记录之间的联系通过指针来实现,查询效率高
+- 缺点
+    - 程序复杂,必须知道数据库的逻辑结构
+
+
+#### 关系模型
+- 用表格表达实体集，用外键表示实体间的联系
+- 优点
+    - 建立在严格的数学概念基础上
+    - 概念单一
+    - 结构简单、清晰
+    - 用户易懂易用
+    - 存取路径对用户透明，从而数据独立性好，安全性好，简化数据库开发
+- 缺点
+    由于存取路径透明，查询效率不如非关系数据模型
+    
+    
+- 关系的三种类型
+    1. 基本关系(基本表，基表)
+        基本表示实际存在的表,它是实际存储数据的逻辑表示
+    2. 查询表
+        查询表是查询结果对应的表
+    3. 视图表
+        视图表是由基本表或其他视图表导出的表,是**虚表**,不对应实际存储的数据
+    
+- 六个性质
+    1. 列是同质的.
+    2. 不同的列可以出自同一个域(表), 其中的每一列为一个属性,不同的属性要给予不同的属性名称
+    3. 列的顺序无所谓,列的次序可以任意交换
+    4. 任何两个元组不能完全相同(两列可以数据相同)
+    5. 行的顺序无所谓
+    6. 分量必须取原子值
+    
+
+    
+#### 面向对象模型
+- 用面向对象观点来描述现实世界实体的逻辑组织、对象间限制、联系等
+
+
+    
+    
     
 ## 数据的规范化
 - 关系模型满足的确定约束条件称为范式.
