--- a/嵌入式系统设计/嵌入式系统设计.md
+++ b/嵌入式系统设计/嵌入式系统设计.md
@@ -18,6 +18,46 @@
     7. 系统资源手限
 
 
+
+## 实时系统 real-time embedded system
+
+- 实时系统可以看成对外部事件及时响应的系统
+
+
+
+### 概念
+
+1. 逻辑(或功能)正确: 指系统对外部事件的处理能够产生正确的结果。
+
+2. 时间正确: 指系统对外部事件的处理必须在预定的周期内完成
+
+3. 死线: 指系统必须对外部事件处理的最迟时间界限，错过此界限可能产生严重后果。通常，计算必须在到达死线之前完成
+
+4. 实时系统: 指功能正确和时间正确同时满足的系统，二者同等重要。
+
+   实时系统有时间约束并且是死线驱动的，为了保证功能正确性，可能牺牲时间正确性
+
+   根据对错失死线的容忍程度，可以将 RTES 分为 软 RTES 和硬 RTES
+
+   - 硬RTES ：必须满足其灵活性接近零死线要求的RTES。死线必须满足，否则就会产生灾难性后果，并且死线之后得到的处理结果或是零级无用，或是高度贬值，在硬 RTES 中 , 错失死线后的处理结果价值为0，错失死线的惩罚是灾难性的
+
+   - 软RTES
+
+     必须满足死线的要求，但是有一定灵活性。死线可以包含可变的容忍等级、平均的时间死线，甚至是带有不同程度的可接受性的响应时间的统计分布。
+
+     在软 RTES 中，错失死线后处理结果的价值会更具应用的性质随时间按照某种关系下降，四线错失不会导致系统失败。
+
+     由于一个或多个错失的死线对软RTES的运行没有决定性的影响，一个软RTES不必预测是否可能有悬而未决的死线错失，相反，软RTES在探知到
+
+
+
+
+
+
+
+## 
+
+
 ## 嵌入式系统的组成
 - 嵌入式处理器、存储器和外部设备
 - 三个层次
@@ -34,3 +74,49 @@
 
 #### 嵌入式处理器
 
+- 分类
+
+1. 嵌入式微处理器
+
+   由通用计算机中的CPU演变而来，在功能上和普通的微处理器基本一致，但是它体积更小，功耗低，质量轻，成本低，可靠性高
+
+   通常嵌入式微处理器和ROM （read only memory 只读存储器） RAM(rand access memory 随机存取存储器) 总线接口及外设接口等部件安装在一块电路板上，称为单板计算机
+
+2. 嵌入式微控制器（单片机）
+
+   将整个计算机系统都集成到一块芯片中。
+
+   嵌入式微控制器一般以某一种微处理器内核作为核心，芯片内部集成有存储器、总线、总线逻辑、定时器、计数器、监督定时器、串口、并口、数模、模数转换器、闪存等必要外设。
+
+   与嵌入式微处理器相比，特点: 单片化，体积更小、功耗和成本更低、更可靠
+
+3. 嵌入式数字型号处理器
+
+   专门用于信号处理的处理器
+
+4. 嵌入式片上系统
+
+   一种在一块芯片上集成很多功能模块的复杂系统
+
+
+
+
+
+## 嵌入式操作系统 EOS embedded operating system 
+
+- 特点
+  1. 微型化
+  2. 代码质量高
+  3. 专业化
+  4. 实时性强
+  5. 可裁剪、可配置
+
+- 根据实时性分类
+  1. 实时嵌入式操作系统 real-time embedded operatiing system RTOS
+  2. 非实时嵌入式操作系统
+
+
+
+
+
+## 一般结构
