--- a/数据库系统/数据库系统.md
+++ b/数据库系统/数据库系统.md
@@ -143,6 +143,168 @@
 2. 备份和恢复的时间尽可能短。保证系统的最大可用性
 
 
+## 数据库的安全性
+### 用户认证
+1. 口令认证, 口令(密码) 
+2. 强身份认证
+
+
+### 用户角色
+- 按每个用户指定操作权限在用户数目比较多的情况下往往是一项非常繁重的工作，DBMS 提供角色来描述具有相同操作权限的用户集合,不同角色的用户授予不同的数据管理和访问操作权限.
+- 一般将权限分为三类
+    1. 数据库登录权限类
+        有数据库登陆权限的用户才能进入DBMS,才能使用DBMS提供的工具和实用程序
+    2. 资源管理权限类
+        具有创建数据库表、索引等对数据对象的管理权限，可以在权限允许的范围内修改、查询数据库
+    3. DBA 权限类
+        拥有数据库的完整权限.
+
+### 数据授权
+- 数据对象的访问控制,访问控制可以根据对控制用户访问数据对象的力度可从大到小分为4个层次
+1. 数据库级别
+    判断用户是否可以使用访问数据库里的数据对象,包括表、视图、存储过程。
+2. 表级
+    判断用户是否可以访问关系里面的内容
+3. 行级
+    判断用户是否能够访问关系中的一行记录的内容
+4. 属性级
+    判断用户是否能访问表关系中的一个列(属性\字段)的内容
+
+- 访问存取控制控制的2个基本原则
+1. 隔离原则: 用户只能存取他自己所有的和已经取得授权的数据对象 
+2. 控制原则: 用户只能按他所取得的数据存取方式存取数据,不能越权
+
+
+### 数据库视图
+- 视图可以被看成是虚拟表或存储查询.
+- 使用视图可以实现下列功能:
+    1. 将用户限定在表中的特定行上
+    2. 将用户限定在特定列上
+    3. 将多个表中的列连接起来,使他们看起来像一个表
+    4. 聚合信息而非提供详细信息
+
+
+## 数据库的完整性
+- **数据库的完整性是指: 数据的正确性和相容性**
+
+### 完整性约束条件
+- 保证数据完整性的方法之一是设置完整性检查,即对数据库中数据设置一些约束条件,这是数据语义的体现.
+- 完整性约束条件一般指的是对数据库中数据本身的某些语法、语义限制，数据间的逻辑约束，以及数据变化时应遵守的规则.
+    所有的这些约束条件一般均以谓词逻辑形式表示,即以具有真假值的原子公式及命题连接词(并且、或者、否定)所组成的逻辑公式
+
+### 完整性控制
+1. 实体完整性
+    实体完整性要求主码(主键)中的任意属性不能为空,主码(主键)不能为空
+2. 参照完整性
+    参照主要通过外码进行关系绑定
+    对于参照完整性需要思考
+        1. 外码能否接受空值
+        2. 在被参照关系中删除元组的问题
+            - 级联删除
+            - 受限删除
+            - 置空删除
+        3. 在参照关系中插入元组的问题
+            - 受限插入
+            - 递归插入
+3. 用户定义的完整性
+4. 触发器
+    - 触发器: 一个事件的发生必然出发另一个时间,其中前面的事件称为触发事件,后面的时间称为结果事件.
+        触发事件一般即为完整性约束条件的否定
+
+
+
+## 数据库性能
+- sql的性能优化
+- 数据库的性能优化
+    1. 监视 DBS 的内存对象获取系统性能指标,发现系统的性能缺陷及问题
+    1. 针对导致系统性能缺陷的原因,进行参数调整
+    1. 跟踪参数调整后系统的各项性能指标，看是否达到预期,否则继续
+- 查询优化
+    1. 把数据、日志、索引放到不同的io设备
+    1. 水平分表，纵向分表
+    1. 根据查询条件，建立索引，优化索引、优化访问方式，限制结果集的数据量
+    1. 使用 or 的字句可以分解成多个查询，并且通过union连接查询结果
+    1. 查询语句中where限制返回行数
+    1. 避免使用 DISTINCT
+    1. 在 in 的值列表中,将最频繁出现的值放在最前面
+    1. 在 group 和 having 字句前可以剔除多余的行. 不要使用 group 和 having 做剔除操作
+    1. 不要再一句话里在三的使用相同的函数,将结果放在变量里在调用会更快
+    1. 数据量小的数据可以不存在数据库中，而是通过程序常量来解决
+    1. 数据存储时可以考虑适当的数据冗余,减少表之间的连接操作
+    1. 针对数据的特点，采取特定的索引类型
+
+
+
+## 数据库工程
+
+- 数据库工程是指基于 DBS 生命周期的所有活动的集合,包括数据库的规划、设计、实现和管理.
+- 数据库设计的五个阶段
+    1. 规划
+        进行建立数据库的必要性及可行性分析
+    2. 需求分析
+        通过**需求信息的采集、分析整理、评审**来执行.
+        目的在于对系统的应用情况做全面详细的调查,确定企业组织的目标
+    3. 概念设计
+        对需求说明书所提供的所有数据和处理要求进行抽象与综合处理,按一定的方法构造反映用户环境的数据及其相互联系的概念模型.
+        概念模型的要求
+            1. 概念模型时对现实世界的抽象和概括
+            2. 概念模型应该简洁、清晰，独立于机器，容易理解、方便数据库设计人员与应用人员交换意见
+            3. 盖面模型应该易于变动, 当应用环境和应用要求改变时，容易对概念模型进行修改和补充
+            4. 概念模型应很容易向关系、层次或网状等各种数据模型转换.
+    4. 逻辑设计
+        将概念模型转换成DBMS能处理的模式
+        转换过程中要对模式进行评价和性能测试
+        逻辑设计的主要内容包括:**初始模式的形成，子模式设计，应用程序设计梗概，模式评价，修正模式**
+        逻辑设计过程中的输入信息
+            1. 独立于 DBMS 的概念模式
+            2. 处理需求
+            3. 约束条件
+            4. DBMS 特性
+    5. 物理设计
+        对一个给定的逻辑数据模型选取一个最适合应用环境的物理结构的过程。
+        物理结构主要指数据库在物理设备上的存储结构和存取方法
+        物理设计的步骤
+            1. 设计存储记录结构,包括记录的组成、数据项的类型和长度，以及逻辑记录到存储记录的映射
+            2. 确定数据存储安排
+            3. 设计访问方法，为存储在物理设备上的数据提供存储和检索的能力
+            4. 进行完整性和安全性的分析，设计
+            5. 程序设计
+            
+            
+## ER图
+- ER图描述的时概念世界,建立概念模型的实用工具.
+- ER图的三要素
+    1. 实体: 用矩形表示,框内标注实体名称
+    2. 属性: 用拖延表示,用实线和实体连接起来
+    3. 联系: 用菱形表示,框内标注联系名称,并用连线将菱形框分别与有关实体相连接,并在连线上标注联系类型
+    
+### 设计过程
+1. 确定举不视图范围
+2. 识别实体及其标识
+3. 确定实体间的联系
+4. 分配实体及联系的属性
+
+
+### 局部 ER 图的冲突
+1. 属性冲突
+    包括属性域冲突和属性取值冲突.
+2. 命名冲突
+    包括同名异义和异名同义
+3. 结构冲突
+    同一对象在不同应用中具有不同的抽象,以及同一实体在不同举不ER途中所包含的属性个数和属性排列次序不完全相同
+
+
+## 并行数据库系统
+- 并行数据库系统实现如下目标
+    1. 高性能
+    2. 高可用性
+    3. 可扩充性
+    
+### 结构
+- 共享内存
+- 共享磁盘
+- 无共享资源
+
 ## 分布式数据库
 特点
 1. 数据的分布性
@@ -158,3 +320,26 @@
 2. 可扩充性好
 3. 可改善性能
 4. 自治性好
+
+
+
+
+## 数据仓库
+- 数据库仓库是一个面向主题的、集成的、相对稳定的、且随时间变化的数据集合，用于支持管理决策
+
+
+- 数据库的分类
+    1. 企业仓库
+        企业仓库收集跨越整个企业的各个主题的所有信息,它提供全企业范围的数据集成，数据通常来自多个操作型数据库和外部信息提供者
+    2. 数据集市
+        包含对特定用户有用的、企业范围数据的一个子集
+    3. 虚拟仓库
+        操作型数据库上视图的集合
+        
+- 数据仓库系统要包含
+    1. 数据源
+    2. 数据准备区
+    3. 数据仓库数据库
+    4. 数库集市/知识挖掘库
+    5. 各种管理工具
+    6. 应用工具
