--- a/软件架构设计/软件架构设计.md
+++ b/软件架构设计/软件架构设计.md
@@ -42,7 +42,7 @@
 
 ## 软件质量属性
 - 软件质量特性包括: **功能性、可靠性、易用性、效率、可维护性、可移植性**
-- 功能性
+- 功能性: 系统所能完成期望工作的能力
     - 适合性
     - 准确性
     - 互操作性
@@ -234,6 +234,11 @@
     2. 采用B/S架构的应用系统,在数据查询等响应速度上低于C/S架构
     3. B/S架构的数据提交一般以页面为单位,数据的动态交互性不强,不利于在线事务处理(OLTP)应用
     
+
+
+    
+    
+
     
 ## MVC 架构风格
 - Model View Controller 模型-视图-控制器
@@ -256,6 +261,12 @@
     1. 视图渲染在presenter中,视图和 presenter 的交互过于频繁
     2. 视图和 presenter 关系过于密切
     
+    
+## 基于层次消息总线的架构
+- 层次消息总线的架构风格基于层次消息总线、支持构件的分布和并发,构件之间通过消息总线进行通讯
+
+## 特定领域软件架构
+- 在一个特定应用领域中为一组应用提供组织结构参考的软件标准，是要给特定问题领域中支持一组应用的领域模型、参考需求、参考架构等组成的开发基础
     
 ## 面向服务的架构
 ### 定义
