--- a/系统故障模型/系统故障模型.md
+++ b/系统故障模型/系统故障模型.md
@@ -6,4 +6,98 @@
 
 ## 故障模型
 1. 逻辑级的故障模型
+    逻辑级的故障有
+        1. 固定型故障
+            电路中元器件的输入或输出等线的逻辑固定为0或固定为1
+        2. 短路故障
+            元件的输出线的逻辑值恒等于输入线的逻辑值
+        3. 开路故障 
+            元件的输出线悬空
+        4. 桥接故障
+            两条不应相连的线连接在一起而发生的故障
+            
 2. 数据结构级的故障
+    故障在数据结构上的表现称为差错.
+        1. 独立差错
+            一个故障的影响表现为使一个二进制位发生变化
+        2. 算术差错
+            一个故障的影响表现为使一个数据值的增加或减少
+        3. 单向差错
+            一个故障得影响表现为使一个二进制向量中的某些位朝一个方向改变
+
+3. 软件故障和软件差错
+    软件故障是指软件设计过程造成的与设计说明不一致，软件故障在数据结构或程序输出中的表现称为软件差错
+    常见的软件差错
+        1. 非法转移
+        2. 误转移
+        3. 死循环
+        4. 空间溢出
+        5. 数据执行
+        6. 非法数据
+4. 系统级的故障模型
+    - 系统输出与系统设计说明不一致
+    
+    
+## 系统可靠性模型
+### 时间模型
+- 基于: 一个软件中的故障数目在t=0时是常数,随着故障被纠正,故障数目减少
+
+### 故障植入模型
+- 是一个面向错误数的数学模型，其目的试一程序的错误数作为衡量可靠性的标准
+- 假设
+    1. 程序中的固有错误数是一个未知常数
+    2. 程序中的人为错误数按均匀分布随机植入
+    3. 程序中的固有错误数和人为错误被检测到的概率相同
+    4. 检测到错误立即改正
+    
+
+## 可靠性指标
+1. 平均无故障时间
+2. 平均故障修复时间
+3. 平均故障间隔时间
+
+### 可靠性计算
+1. 串联系统
+    串联系统的可靠性 R = R1 X R2 X R3 X RN
+    串联系统的失效率 各个子系统的失效率相加
+    
+2. 并联系统
+    并联系统的可靠性 R = 1 - (1-R1) * ... *(1-RN)
+    
+    
+    
+
+## 冗余技术
+### 结构冗余
+- 按工作方式分为: 1. 静态冗余 2. 动态冗余 3. 混合冗余
+### 信息冗余
+- 在实现正常功能所需要的信息外，再添加一些信息，以保证允许结果正确性的方法
+### 时间冗余
+- 使用父架一定时间的方法来完成系统功能.
+
+### 冗余附加技术
+- 为实现上述冗余技术所需的资源和技术,包括程序、指令、数据、存放和调动他们的空间和通道等
+
+
+
+## 软件容错
+- 恢复块方法
+- N-版本程序设计
+- 防卫式程序设计
+
+
+## 集群技术
+- 集群由两台以上节点机构成的一种松散耦合的计算节点集合,为用户提供网络服务或应用程序的单一客户视图,同时提供接近容错机的故障恢复能力
+
+### 集群分类
+1. 高性能计算科学集群
+    以解决复杂的科学计算问题为目的的集群系统
+2. 负载均衡集群
+    使各节点的负载流量可以在服务器集群中尽可能平均合理地分摊处理
+3. 高可用性集群
+    为保证集群整体服务地高可用，考虑计算机硬件和软件地容错性
+    
+### 集群的硬件配置
+1. 镜像服务器双机
+2. 双击与磁盘阵列柜
+3. 光纤通道双机双控集群系统
