系统故障模型

--- a/开发方法/开发方法.md
+++ b/开发方法/开发方法.md
@@ -51,6 +51,32 @@
 
    - 通过了确认测试将软件投入生产也会有问题出现，此时需要进行维护解决这些问题。
 
+## 软件开发方法
+### 净室方法
+- 使用盒结构规约进行分析和设计建模,并且强调正确性作为发现和消除错误的主要机制.
+- 黑盒
+    刻划系统或系统的某部分的行为
+- 状态盒
+    类似于对象的方式封装状态数据和服务
+- 清晰盒
+    在清晰盒中定义状态盒所蕴含的变迁功能
+    
+### 结构化方法
+- 自顶向下，逐步求精
+- 生命周期
+    1. 结构化分析
+    2. 结构化设计
+    3. 结构化程序设计
+    
+
+
+- 基本原则
+    1. 面向用户的观点
+    2. 严格区分工作阶段
+    3. 按照系统的观点,自顶向下
+    4. 充分考虑变化的情况
+    
+
 
 
 
