--- a/速记.md
+++ b/速记.md
@@ -56,3 +56,69 @@
 1. ER图表示**数据模型**
 1. DFD表示功能模型
 1. 状态转换图表示行为模型
+1. xpath 提供xml查找方法
+1. 使用DTD进行验证，增加操作时间
+1. 基于构件的开发模型包括软件的**需求分析定义、体系结构设计、构件库建立，应用软件构件、测试、发布**
+1. 构件获取方法
+    1. 从现有构件中获取
+    1. 通过遗留工程
+    1. 从市场上购买
+    1. 开发新的构件
+1. 开发构件的策略
+    1. 分区
+    2. 抽象
+    3. 分割
+1. 构件标准
+    1. CORBA 
+    1. COM/DCOM
+    1. EJB
+1. 接口标准化是对**接口中消息模式、格式和协议**
+1. ISO的五类安全服务: **鉴别、访问控制、数据机密性、数据完整性、抗抵赖性**
+1. 数据库管理系统的安全策略:**用户管理，存取控制，数据加密，审计跟踪，攻击检测**
+1. 可靠性测试的目的
+    1. 软件系统缺陷
+        1. 需求分析
+        1. 软件设计
+        1. 系统编码
+        1. 测试实施
+    1. 为软件的使用和维护提供可靠性依据
+    1. 确认软件是否达到可靠性的定量标准
+1. 实现级: 抽象语法树，符号表
+1. 结构级: 程序分量之间互相依赖关系，结构图，调用图
+1. 功能级: 反映程序功能的信息
+1. 领域级: 反映程序分量、应用领域之间的对应关系
+1. 计划阶段
+    三方面讨论:**移植技术、系统内容、系统运行**
+    确立移植工作体制，移植日程，移植方法
+1. 准备阶段
+1. 转换阶段
+    将程序设计和数据转换成新机器能根据需要的工作的阶段
+1. 测试阶段
+    进行工作单元、程序单元的测试otepad
+1. 验证阶段
+
+1. RUP 架构视图:**逻辑视图、实现视图、进程视图、部署视图、用例视图**
+1. VRAPS原则:**构想原则、节奏原则、预见原则、写作原则、简化原则**
+1. MVC : **模型 控制器 视图**
+1. 企业集成平台的基本功能: **通信服务，信息集成服务，应用集成服务，二次开发工具，平台运行管理工具**
+1. 嵌入式三要素:**嵌入性、专用性、计算机系统**
+1. 嵌入式特点:**专用性强、实时性强、软硬件依赖性强、处理器专用、多技术结合、系统透明、系统资源受限**
+1. 瀑布模型
+    1. 需求分析阶段: 确定目标系统的特点
+    2. 系统结构设计阶段: 将系统的功能分解为主要的架构
+    3. 编码
+    4. 测试
+    5. 维护
+1. RTOS 调度:**抢占,可剥夺**
+1. UDDI: 服务发布、服务查找、服务定位的方法
+1. WSDL 服务描述
+1. SOAP 服务协议, 四个部分: **封装、编码规则、RPC表示、绑定**
+1. RUP四个阶段:**初始化、细化、构建、移交**
+1. 初始化阶段任务:**为系统建立业务模型并确定项目的边界**
+1. 细化阶段任务:**分析问题领域、建立完善的架构、淘汰项目中最高风险的元素**
+1. 构建阶段任务: 开发剩余构建
+1. 移交阶段任务: 确保软件对最终用户是可用的
+1. 价值模型的三个特征**价值期望、反作用力和变革催化剂**
+1. 联邦企业体系结构FEAF 四部分**业务、数据、应用程序、技术**
+1. 项目三约束:**时间、成本和质量**
+1. 服务特性
