系统故障模型

--- a/速记.md
+++ b/速记.md
@@ -121,4 +121,9 @@
 1. 价值模型的三个特征**价值期望、反作用力和变革催化剂**
 1. 联邦企业体系结构FEAF 四部分**业务、数据、应用程序、技术**
 1. 项目三约束:**时间、成本和质量**
-1. 服务特性
+1. 知识产权有**地域性、无体性、专有性、时间性**
+1. 保护时间 50 年,首次发表后的50年12月31日截止
+1. 署名权的保护期不受限制
+1. 嵌入式存取最快的是::**寄存器**
+1. PCI 外设部件互联标准
+1. 
