--- a/速记.md
+++ b/速记.md
@@ -1,4 +1,36 @@
-1. 现代信息系统的构件三要素:**构件、模式、规划**
+1. 霍尔三维结构:**逻辑、时间、知识**
+1. 4个最优:**规划、设计、管理、控制**
+1. 结构、元素、信息
+1. 研制阶段提出生产方案
+1. 生产阶段提出安装方案
+1. 时间管理包括:**活动定义、活动排序、活动的资源估算、活动历时估算、指定计划、进度控制**
+1. 需求分析阶段的图: **数据流图**
+1. 概要设计阶段: **模块结构图、层次图、HIPO图**
+1. 详细设计阶段: **程序流程图、伪代码、盒图**
+1. 高质量的**数据设计**将改善程序结构和模块划分,降低过程复杂性,(**软件结构设计**)的主要目的是开发一个模块化的程序结构，并表示出模块间的控制关系.(**人机界面设计**)描述了软件与用户之间的交互关系
+1. 构件组装三层次：**定制、集成、拓展**
+1. 伺服对象: 完成客户端请求
+1. 领域涉及的目标是获得**特定领域软件架构**
+1. 领域实现为了**开发和组织可重用信息，对基础软件架构进行实现**
+1. ATAM四个活动**场景和需求收集、体系结构视图、场景实现、属性模型构造和分析、这种**
+1. SAAM活动:**场景开发、体系结构描述、单个场景评估、场景交互和总体评估**
+1. SAAM 输入问题 **问题描述、需求声明和体系结构描述**
+1. 仓库风格有两种不同的构件:**中央数据结构说明当前状态,独立构件在中央数据库存储上执行**
+1. 消息摘要目的:**防篡改**,摘要的加密**防止抵赖**
+1. DMA: **主存外设**
+1. RISC : **质量多 寻址少**
+1. CISC : **指令多 寻址多**
+1. 分布式数据库2个阶段:**表决、执行**
+1. 计算机指标:**时钟频率、数据处理速率、运算精度、内存容量**
+1. 数据库管理系统指标:**最大连接数、允许的索引数量、最大并发事务处理能力**
+1. 项目范围管理: 范围定义:**项目章程、项目管理计划、组织过程资产、批准的变更申请**
+1. **识别问题,问题分析和变更描述，变更分析和成本计算，变更实现**
+1. 软件活动:**描述、开发、有效性、进化**
+1. 敏捷开发: **极限编程，适应性，增量迭代**
+1. 现代信息系统的构件三要素:**构件、模式、规划、面向对象**
+1. 按照软件过程将软件分:**软件开发工具、软件维护工具、软件管理工具、软件支持工具**
+1. sccs ： 版本控制工具
+1. 结构化程序: **顺序、分支、循环**
 1. 软件架构是关于软件系统的**结构、行为和属性**的高级抽象
 1. 操作系统特性:**并发性、共享性、虚拟性、不确定性** 
 1. 操作系统的功能:**进程管理、文件管理、存储管理、设备管理、作业管理**
@@ -38,6 +70,7 @@
 1. 原型模型:**提交前通过可视化的方式呈现需求**
 1. 螺旋模型：**风险分析**
 1. 4+1: **逻辑视图，实现试图，进程视图，部署试图，用例视图**
+1. 4+1: **逻辑视图，开发视图，物理视图，进程视图，场景**
 1. 需求管理: **变更控制，版本控制，需求跟踪，需求状态跟踪**
 1. 成本管理的活动:**成本估算、成本预算、成本控制**
 1. 用户文档包括:**功能描述，安装文档、使用手册、参考手册、操作员指南**
@@ -72,6 +105,11 @@
     1. CORBA 
     1. COM/DCOM
     1. EJB
+1. 构件特性
+    1. 独立部署
+    1. 作为第三方的组装单元
+    1. 没有可见装固态
+    1. 一个实力单元有唯一标识
 1. 接口标准化是对**接口中消息模式、格式和协议**
 1. ISO的五类安全服务: **鉴别、访问控制、数据机密性、数据完整性、抗抵赖性**
 1. 数据库管理系统的安全策略:**用户管理，存取控制，数据加密，审计跟踪，攻击检测**
